# hgignore-to-gitignore

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
pkg/: Makefile  PKGBUILD
src/: cli.rs  converter.rs  main.rs
tests/: sample.hgignore
