
[package]
name = "hgignore-to-gitignore"
version = "1.0.0"
edition = "2024"
authors = ["Denis Salmanovich"]
description = "Convert .hgignore files to .gitignore format"
license = "MIT"
repository = "https://github.com/denix666/hgignore-to-gitignore"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.12"

[[bin]]
name = "hgignore-to-gitignore"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
